Revision history for Perl-PrereqScanner

{{$NEXT}}
 - fix rt#55713: support for use parent -norequire

0.100690  2010-03-10 21:06:49 America/New_York
 - remove another 5.10-ism

0.100680  2010-03-09 19:10:27 America/New_York
 - fix PPI version required (thanks, Christopher J. Madsen)

0.100630  2010-03-04 22:58:55 America/New_York
 - work on perl 5.8
 - require a newer Version::Requirements with critical bugfix

0.100521  2010-02-21 23:20:55 America/New_York
 - scanning methods now return Version::Requirements objects

0.100520  2010-02-21 15:55:31 America/New_York
 - add perl prereq to Makefile.PL to stop test failures

0.100510  2010-02-20 17:38:59 America/New_York
 - typo fixes (ricardo signes)
 - new script scan_prereqs
 - prereq accounting now managed by Version::Requirements
 - easier-to-link-to Pod

0.100491  2010-02-18 19:16:15 Europe/Paris
 - added a changelog (this file)

0.100490 2010-02-18 19:10:32 Europe/Paris
 - factored out from dist-zilla-plugin-autoprereq
 - fix qw and base-ver parent-ver (ricardo signes)
 - require base if version given (ricardo signes)
 - refactor with/extends (ricardo signes)
 - new methods scan_string() / scan_file()